crates/cypher-sema/src/snapshots/cypher_sema__kinds__tests__kinds_node_in_arithmetic_mismatch.snap
---
source: crates/cypher-sema/src/kinds.rs
expression: run(&stmt)
---
diagnostics: 1
  E2007: variable `n` has kind `Node` but is used in an arithmetic expression; only `Value` variables are valid here
