crates/cypher-sema/src/snapshots/cypher_sema__kinds__tests__kinds_node_in_rel_pattern_mismatch.snap
---
source: crates/cypher-sema/src/kinds.rs
expression: run(&stmt)
---
diagnostics: 1
  E2008: variable `n` used in relationship-pattern position but has kind `Node`; expected `Relationship`
