crates/cypher-sema/src/snapshots/cypher_sema__kinds__tests__kinds_path_in_prop_access_mismatch.snap
---
source: crates/cypher-sema/src/kinds.rs
expression: run(&stmt)
---
diagnostics: 1
  E2007: variable `p` has kind `Path` and does not support property access; use `nodes()` or `relationships()` to extract graph elements first
