crates/cypher-sema/src/snapshots/cypher_sema__kinds__tests__kinds_value_in_node_pattern_mismatch.snap
---
source: crates/cypher-sema/src/kinds.rs
expression: run(&stmt)
---
diagnostics: 1
  E2008: variable `x` used in node-pattern position but has kind `Value`; expected `Node`
